k8s/express-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: enterprise-api

spec:
  replicas: 2
  selector:
    matchLabels:
      app: enterprise-api
  template:
    metadata:
      labels:
        app: enterprise-api
    spec:
      containers:
        - name: enterprise-api
          image: hardikmisri/enterprise-task-manager:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
