k8s/express-service.yml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-api-service

spec:
  selector:
    app: enterprise-api

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
