k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: enterprise-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: enterprise.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: enterprise-api-service
                port:
                  number: 3000
